--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Git Workshop</title>
   </head>
   <body>
-    <h1>Titlu mai elaborat</h1>
+    <h1>Titlu mai elaborat colegul</h1>
     <h2>Subtitlu</h2>
   </body>
 </html>
